<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MockGeoFix</string>
    <string name="main_title">MockGeoFix</string>
    <string name="settings_title">Settings</string>

    <string name="long_description">MockGeoFix makes your phone support \"geo fix\"
    and \"geo nmea\" commands (compatible with the android emulator commands).
    &lt;br/>&lt;br/>&lt;b>\"Mock Locations\" must be enabled in developer options.&lt;br/>
    Also make sure to disable all location sources except "GPS satellites" in \"Location Sources\"
     settings. (MockGeoFix mocks a GPS provider.)&lt;/b>
    &lt;br/>&lt;br/>Telnet to port %s using one of the IPs above and enter a geo command. For example:
    &lt;br/>geo fix -121.45356 46.51119 4392
    </string>

    <string name="notification_text">Running. Touch to open MockGeoFix.</string>
    <string name="enable_mocklocation">\"Allow mock location\" must be enabled for MockGeoFix
     to work correctly. Open \"Developer options\"?</string>
    <string name="development_settings_notfound">Failed to open \"Developer options\". You are probably
     running too old Android. You have to open \"Developer options\" manually.</string>

    <string name="open_location_source_settings">GPS location provider should be enabled and all other
    providers should be disabled for MockGeoFix to work properly. Open \"Location Sources\" settings?</string>
    <string name="location_source_notfound">Failed to open \"Location Sources\".
    You have to open \"Location Sources\" settings manually.</string>
    <string name="provider_enabled">Warning: Location provider \"%s\" is enabled.
    This provider might collide with MockGeoFix location updates.</string>

    <!-- preferences -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_security">Security</string>
    <string name="notifications_on">Show notifications</string>
    <string name="listen_port">Listen TCP port</string>
    <string name="listen_ip">Listen IP</string>
    <string name="accuracy">Accuracy</string>
    <string name="password">Set password</string>
    <string name="require_password">Require password</string>
    <string name="require_password_summary"><b>WARNING:
        Requiring password breaks compatibility with tools depending on
        the standard android emulator geo command behaviour.

        \n\nPassword is provided using the following telnet command:
        \nPASSWORD &lt;password&gt;
        \nExample: PASSWORD blue-taco</b></string>



    <!-- main activity -->
    <string name="status">status: </string>
    <string name="running">running</string>
    <string name="stopped">stopped</string>
    <string name="show_preferences">Settings</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="listens_on">Listens on: </string>

    <!-- errors -->
    <string name="invalid_port">That\'s an invalid port number. Port must be a number between 0 and 65535.</string>
    <string name="err_address_already_in_use">Binding error. Address/port already in use.</string>
    <string name="err_socket_permission_denied">Binding error. Permission denied. (You should use port number >=1024.)</string>
    <string name="err_access_mock_location">Mock Location Provider could not be created.
    Is \"Allow mock locations\"  enabled in \"Developer options\"?</string>

    <!-- notes -->
    <string name="note_needsreset">Note: This change won\'t take effect until you restart the service.</string>


</resources>
